[tool.poetry]
name = "gmt-lillomarka"
version = "0.1.0"
description = ""
authors = ["Oyvind Torgersrud <oyvind.torgersrud@ngi.no>"]
readme = "README.md"
packages = [{include = "gmt_lillomarka"}]

[tool.poetry.dependencies]
python = "^3.11"
pygmt = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
mypy = "^1.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
